--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <header role="banner" class="probootstrap-header">
     <div class="container">
-        <a href="index.html" class="probootstrap-logo"><font size='10'><b>Flower</b></font></a>
+        <a href="index.html" class="probootstrap-logo"><font size='10'><b>Life</b></font></a>
         
     </div>
   </header>
@@ -46,15 +46,15 @@
 
       <div class="row probootstrap-gutter16">
         <div class="col-md-4 probootstrap-animate" data-animate-effect="fadeIn">
-          <a href="http://ww1.sinaimg.cn/mw690/005LCtBbly1fv6ltetg8fj33vc2kwx71.jpg" class="img-bg" style="background-image: url(http://ww1.sinaimg.cn/large/005LCtBbly1fs0bpdzmhmj32001c0x6q.jpg);">
+          <a href="http://ww1.sinaimg.cn/large/005LCtBbly1fv6ltetg8fj33vc2kwx71.jpg" class="img-bg" style="background-image: url(http://ww1.sinaimg.cn/large/005LCtBbly1fs0bpdzmhmj32001c0x6q.jpg);">
             <div class="probootstrap-photo-details">
-              <h2>Luzhi Town</h2>
-              <p>SuZhou</p>
+              <h2>Beer</h2>
+              <p>VALENCIA</p>
             </div>
           </a>
         </div>
         <div class="col-md-8 probootstrap-animate" data-animate-effect="fadeIn">
-          <a href="http://ww1.sinaimg.cn/mw690/005LCtBbly1fv6ltcsk5fj33rl2ie4qw.jpg" class="img-bg" style="background-image: url(http://ww1.sinaimg.cn/large/005LCtBbly1fs0bobru6vj33vc2kwkk1.jpg);">
+          <a href="http://ww1.sinaimg.cn/large/005LCtBbly1fv6ltcsk5fj33rl2ie4qw.jpg" class="img-bg" style="background-image: url(http://ww1.sinaimg.cn/large/005LCtBbly1fs0bobru6vj33vc2kwkk1.jpg);">
             <div class="probootstrap-photo-details">
               <h2>Maple</h2>
               <p>QingDao</p>
