--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
       <div class="row">
         <div class="col-md-6 col-md-offset-3 mb40">
           <h2>I'm a photographer</h2>
-          <p> </p>    
+          <p> 
+	 Life should be like this way<br>
+         Stop walking. when you are Tired
+         Appreciate the scenery outside the window</p>    
         </div>
       </div>
 
@@ -69,7 +72,7 @@
           </a>
         </div>
         <div class="col-md-3 probootstrap-animate" data-animate-effect="fadeIn">
-          <a href="http://ww1.sinaimg.cn/large/005LCtBbly1fvdyvwu6eqj33hy2a0b2f.jpg" class="img-bg" style="background-image: url(http://ww1.sinaimg.cn/large/005LCtBbly1fvdyvwu6eqj33hy2a0b2f.jpg);">
+          <a href="http://ww1.sinaimg.cn/large/005LCtBbly1fvdz2z5sivj32i33r51l2.jpg" class="img-bg" style="background-image: url(http://ww1.sinaimg.cn/large/005LCtBbly1fvdz2z5sivj32i33r51l2.jpg);">
             <div class="probootstrap-photo-details">
               <h2>Dandelion</h2>
               <p>LaiYang</p>
