--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         <div class="col-md-8 probootstrap-animate" data-animate-effect="fadeIn">
           <a href="http://ww1.sinaimg.cn/large/005LCtBbly1fv6ltcsk5fj33rl2ie4qw.jpg" class="img-bg" style="background-image: url(http://ww1.sinaimg.cn/large/005LCtBbly1fv6ltcsk5fj33rl2ie4qw.jpg);">
             <div class="probootstrap-photo-details">
-              <h2>Maple</h2>
-              <p>QingDao</p>
+              <h2>Afternoon</h2>
+              <p>VALENCIA</p>
             </div>
           </a>
         </div>
@@ -66,8 +66,8 @@
         <div class="col-md-5 probootstrap-animate" data-animate-effect="fadeIn">
           <a href="http://ww1.sinaimg.cn/large/005LCtBbly1fvdyuvglr3j33vc2kwe87.jpg" class="img-bg" style="background-image: url(http://ww1.sinaimg.cn/large/005LCtBbly1fvdyuvglr3j33vc2kwe87.jpg);">
             <div class="probootstrap-photo-details">
-              <h2>Fallen Leaves</h2>
-              <p>OUC</p>
+              <h2>On the way</h2>
+              <p>DALI</p>
             </div>
           </a>
         </div>
@@ -75,15 +75,15 @@
           <a href="http://ww1.sinaimg.cn/large/005LCtBbly1fvdz2z5sivj32i33r51l2.jpg" class="img-bg" style="background-image: url(http://ww1.sinaimg.cn/large/005LCtBbly1fvdz2z5sivj32i33r51l2.jpg);">
             <div class="probootstrap-photo-details">
               <h2>Dandelion</h2>
-              <p>LaiYang</p>
+              <p>JINAN</p>
             </div>
           </a>
         </div>
         <div class="col-md-4 probootstrap-animate" data-animate-effect="fadeIn">
           <a href="http://ww1.sinaimg.cn/large/005LCtBbly1fvdysymhm6j33mf2eyx6q.jpg" class="img-bg" style="background-image: url(http://ww1.sinaimg.cn/large/005LCtBbly1fvdysymhm6j33mf2eyx6q.jpg);">
             <div class="probootstrap-photo-details">
-              <h2>Cherry Blossoms</h2>
-              <p>OUC</p>
+              <h2>Old City</h2>
+              <p>JINAN</p>
             </div>
           </a>
         </div>
@@ -93,16 +93,16 @@
         <div class="col-md-8 probootstrap-animate" data-animate-effect="fadeIn">
           <a href="http://ww1.sinaimg.cn/large/005LCtBbly1fvdyx7o1myj33kg2dn4qy.jpg" class="img-bg" style="background-image: url(http://ww1.sinaimg.cn/large/005LCtBbly1fvdyx7o1myj33kg2dn4qy.jpg);">
             <div class="probootstrap-photo-details">
-              <h2>Cherry Blossoms</h2>
-              <p>OUC</p>
+              <h2>Pineapple Rice</h2>
+              <p>QINGDAO</p>
             </div>
           </a>
         </div>
         <div class="col-md-4 probootstrap-animate" data-animate-effect="fadeIn">
           <a href="http://ww1.sinaimg.cn/large/005LCtBbly1fvdyyiqxr8j33vc2kwe8a.jpg" class="img-bg" style="background-image: url(http://ww1.sinaimg.cn/large/005LCtBbly1fvdyyiqxr8j33vc2kwe8a.jpg);">
             <div class="probootstrap-photo-details">
-              <h2>Wuhua Building</h2>
-              <p>DaLi</p>
+              <h2>Coast Coffee</h2>
+              <p>QINGDAO</p>
             </div>
           </a>
         </div>
