--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <h2>I'm a photographer</h2>
           <p> 
 	 Life should be like this way<br>
-         Stop walking. when you are Tired
+         Stop walking. when you are Tired<br>
          Appreciate the scenery outside the window</p>    
         </div>
       </div>
