--- a/index.html
+++ b/index.html
@@ -134,7 +134,26 @@
           </a>
         </div>
       </div>   
-	  
+	
+	 <div class="row probootstrap-gutter16">
+        <div class="col-md-4 probootstrap-animate" data-animate-effect="fadeIn">
+          <a href="http://ww1.sinaimg.cn/large/005LCtBbly1fw6joafx22j33j62eynpm.jpg" class="img-bg" style="background-image: url(http://ww1.sinaimg.cn/nw690/005LCtBbly1fw6joafx22j33j62eynpm.jpg;">
+            <div class="probootstrap-photo-details">
+              <h2>Beer</h2>
+              <p>VALENCIA</p>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-8 probootstrap-animate" data-animate-effect="fadeIn">
+          <a href="http://ww1.sinaimg.cn/large/005LCtBbly1fw6jo5w2g4j33pi2h0x6w.jpg" class="img-bg" style="background-image: url(http://ww1.sinaimg.cn/nw690/005LCtBbly1fw6jo5w2g4j33pi2h0x6w.jpg);">
+            <div class="probootstrap-photo-details">
+              <h2>Afternoon</h2>
+              <p>VALENCIA</p>
+            </div>
+          </a>
+        </div>
+      </div>    
+	    
     </div>
   </div>
 
