--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           </a>
         </div>
         <div class="col-md-4 probootstrap-animate" data-animate-effect="fadeIn">
-          <a href="" class="img-bg" style="background-image: url();">
+          <a href="http://ww1.sinaimg.cn/large/005LCtBbly1g5p3lgdldwj33922hzu13.jpg" class="img-bg" style="background-image: url(http://ww1.sinaimg.cn/mw690/005LCtBbly1g5p3lgdldwj33922hzu13.jpg);">
             <div class="probootstrap-photo-details">
               <h2>PiChaiYuan</h2>
               <p></p>
