--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <div class="col-md-4 probootstrap-animate" data-animate-effect="fadeIn">
           <a href="http://ww1.sinaimg.cn/large/005LCtBbly1g5p3lgdldwj33922hzu13.jpg" class="img-bg" style="background-image: url(http://ww1.sinaimg.cn/mw690/005LCtBbly1g5p3lgdldwj33922hzu13.jpg);">
             <div class="probootstrap-photo-details">
-              <h2>PiChaiYuan</h2>
+              <h2>Sirloin Steakn</h2>
               <p></p>
             </div>
           </a>
