--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
         <div class="col-md-4 probootstrap-animate" data-animate-effect="fadeIn">
           <a href="http://ww1.sinaimg.cn/large/005LCtBbly1g6tkv979m5j33t82jhkju.jpg" class="img-bg" style="background-image: url(http://ww1.sinaimg.cn/mw690/005LCtBbly1g6tkv979m5j33t82jhkju.jpg);">
             <div class="probootstrap-photo-details">
-              <h2>King Crab</h2>
-              <p>Jagalchi Market</p>
+              <h2></h2>
+              <p></p>
             </div>
           </a>
         </div>
@@ -213,14 +213,14 @@
           <a href="http://ww1.sinaimg.cn/large/005LCtBbly1g6tkz3df9cj330t20ju0z.jpg" class="img-bg" style="background-image: url(http://ww1.sinaimg.cn/mw690/005LCtBbly1g6tkz3df9cj330t20ju0z.jpg);">
             <div class="probootstrap-photo-details">
               <h2></h2>
-              <p>Busan</p>
+              <p>Valencia</p>
             </div>
           </a>
         </div>
         <div class="col-md-4 probootstrap-animate" data-animate-effect="fadeIn">
           <a href="http://ww1.sinaimg.cn/large/005LCtBbly1g6tl0ddwgsj34002o0x70.jpg" class="img-bg" style="background-image: url(http://ww1.sinaimg.cn/mw690/005LCtBbly1g6tl0ddwgsj34002o0x70.jpg);">
             <div class="probootstrap-photo-details">
-              <h2>Sirloin Steakn</h2>
+              <h2>Paella</h2>
               <p></p>
             </div>
           </a>
